--- a/requirements_old.txt
+++ b/requirements_old.txt
@@ -1,11 +1,7 @@
 appdirs==1.4.0
 beautifulsoup4==4.5.3
 bs4==0.0.1
-certifi==2017.4.17
-chardet==3.0.4
-idna==2.5
 packaging==16.8
 pyparsing==2.1.10
-selenium==3.4.3
+requests==2.13.0
 six==1.10.0
-urllib3==1.21.1
