--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 appdirs==1.4.0
 beautifulsoup4==4.5.3
+boto3==1.4.4
+botocore==1.5.75
 bs4==0.0.1
 certifi==2017.4.17
 chardet==3.0.4
+docutils==0.13.1
 idna==2.5
+jmespath==0.9.3
+nyt-nj-campfin==0.0.1
 packaging==16.8
 pyparsing==2.1.10
+python-dateutil==2.6.0
+requests==2.13.0
+s3transfer==0.1.10
+schedule==0.4.3
 selenium==3.4.3
-schedule=0.4.3
 six==1.10.0
 urllib3==1.21.1
